Update index.html from “business” to “presence”

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="text-center">
                 <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Digital Services</h1>
                 <h1 class="mt-6 text-lg leading-8 text-gray-600">Web development and Online Marketing</h1>
-                <h1 class="mt-2 text-lg leading-8 text-gray-600">Enriching your business on the web.</h1>
+                <h1 class="mt-2 text-lg leading-8 text-gray-600">Enriching your presence on the web.</h1>
                 <div class="mt-10 flex items-center justify-center gap-x-6">
                     <a href="mailto:shak@grittyhill.com"
                         class="rounded-md bg-[#007A3F] px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-[#00CC69] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Contact
